This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix socketmodule.c:sock_recvfrom_guts() comment.
Type: Stage:
Components: Library (Lib) Versions: Python 2.6
process
Status: closed Resolution: accepted
Dependencies: Superseder:
Assigned To: Nosy List: albertito, gvanrossum
Priority: normal Keywords: patch

Created on 2007-12-18 02:52 by albertito, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
0001-Fix-socketmodule.c-sock_recvfrom_guts-comment.patch albertito, 2007-12-18 02:52
Messages (2)
msg58720 - (view) Author: Alberto Bertogli (albertito) Date: 2007-12-18 02:52
The comment above sock_recvfrom_guts() was copied from sock_recv_guts() and
referenced recv() and recv_into() when it should be talking about recvfrom()
and recvfrom_into().

The attached patch (against trunk) fixes it.
msg58764 - (view) Author: Guido van Rossum (gvanrossum) * (Python committer) Date: 2007-12-18 20:10
Committed revision 59551.
History
Date User Action Args
2022-04-11 14:56:29adminsetgithub: 45986
2007-12-18 20:10:48gvanrossumsetstatus: open -> closed
resolution: accepted
messages: + msg58764
nosy: + gvanrossum
2007-12-18 02:54:53christian.heimessetpriority: normal
keywords: + patch
2007-12-18 02:52:26albertitocreate