Issue #1645 by Alberto Bertogli.  Fix a comment.